  * Add explicit build-depends on fdisk on arm64, amd64 and i386 now that
    util-linux doesn't depends on it anymore.

  [ Wookey, Steve McIntyre, Alper Nebi Yasak ]
  * Enable gtk build for arm64

  [ Domenico Andreoli ]
  * Add support for NanoPi NEO Air. Closes: #928863

  [ Holger Wansing]
  * d-i i18n guide: update for util-linux's eject overtaking.

  [ Steve McIntyre ]
  * Tweaks for efi-image:
    + Improve sizing calculation to reduce wasted space
    + Include DTB files in the ESP for armhf and arm64 systems. Should
      make U-Boot based systems work better when booting via UEFI
  * Fix build failures related to #940056 "fakeroot does not fake
    statx()". Don't use "ls" to check if /dev/console is a character
    device, instead use "file". Thanks to JH Chatenet for helping to
    debug this.

  [ Samuel Thibault ]
  * Copy over libmach/hurduser, until the fixed glibc is installed.
  * Fix monolithic hurd build by excluding more packages.

  [ Jessica Clarke ]
  * kfreebsd: Update to use debian-ports-archive-keyring.
  * kfreebsd: Don't try to build build_cdrom_gtk on kfreebsd-i386.

  [ Julien Cristau ]
  * Add grub2 to built-using (closes: #968998).

  [ Ben Hutchings ]
  * Add wireless-regdb-udeb to Linux builds that include nic-wireless-modules

  [ Alper Nebi Yasak ]
  * Include a /gtk/initrd.gz in graphical arm mini.iso builds
  * Include fb-modules in non-gtk arm64 cdrom builds as well
  * Build concatenateable images for arm64 netboot-gtk

 -- Cyril Brulebois <kibi@debian.org>  Thu, 09 Apr 2020 09:06:18 +0200

debian-installer (20200314) unstable; urgency=medium

  [ John Paul Adrian Glaubitz ]
  * hppa: Strip -smp suffix from 64-bit kernel version string.

  [ YunQiang Su ]
  * Switch from vmlinux to vmlinuz for mips* except on Octeon.

  [ Raphaël Hertzog ]
  * Make write-built-using more robust.

  [ Vagrant Cascadian ]
  * Update Firefly-RK3288 image for new u-boot version.

  [ Cyril Brulebois ]
  * Bump Linux kernel ABI to 5.4.0-4