@@ -944,6 +944,21 @@
 	      countries_official="NO"
 	      countries_most_spoken=""
 		/>
+        <language_entry
+		code="oc"
+		code3="oci"
+		english_name="Occitan"
+		coord_name="Quentin PAGÈS"
+		coord_email="quentinantonin@free.fr"
+		last_commit_di="2020"
+		team_email="ubuntu-l10n-oci@lists.ubuntu.com"
+		supported="bullseye"
+		speakers="789000"
+		speakers_corr=""
+		nlp_step="language_name"
+		countries_official="FR"
+		countries_most_spoken=""
+                        />
 <!-- Norwegian Nynorsk - former translators: Eirik U. Birkeland, eirbir@gmail.com -->
 	<language_entry
 		code="os"
